--- a/openpylib/src/main/cpp/CMakeLists.txt
+++ b/openpylib/src/main/cpp/CMakeLists.txt
@@ -3,6 +3,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../jniLibs/${CMAKE_ANDROID_ARCH_ABI})
 INCLUDE_DIRECTORIES(includes/${CMAKE_ANDROID_ARCH_ABI})
 
-AUX_SOURCE_DIRECTORY(python SRCS)
-ADD_LIBRARY(openpylib SHARED ${SRCS})
+FILE(GLOB_RECURSE SRC_LIST sources/*.cpp)
+ADD_LIBRARY(openpylib SHARED ${SRC_LIST})
 TARGET_LINK_LIBRARIES(openpylib python3.8)
